tests/accept/test_sum_globl_var.lp
# expected = 15
Program{
    int x = 5;

    int main(){
        int y = 10;
        x = x + y;
        return x;
    }
}